--- a/api/v1/package.json
+++ b/api/v1/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "argon2": "^0.30.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.0.4"
   }
 }
