--- a/api/v1/package.json
+++ b/api/v1/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "uuid": "^9.0.0"
   }
 }
