--- a/api/v1/package.json
+++ b/api/v1/package.json
@@ -17,7 +17,13 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "gridfile": "^1.1.4",
     "mongoose": "^7.0.4",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0"
   }
 }
